--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='myApp'>
   <head>
     <title>Angular Friends</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
   </head>
 
-  <body>
+  <body ng-controller='friendCtrl'>
     <h1>The <strong>facebook</strong> Friend Machine</h1>
-
+    
     <div class="friends">
       <form class="form-inline searchForm" role="form">
         <div class="form-group">
@@ -49,6 +49,9 @@
 
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.6/angular.min.js"></script>
+    <script src='js/app.js'></script>
+    <script src='js/friendCtrl.js'></script>
     <!-- your scripts here -->
   </body>
 </html>
