--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
   <body ng-controller='friendCtrl'>
     <h1>The <strong>facebook</strong> Friend Machine</h1>
-    
+
     <div class="friends">
       <form class="form-inline searchForm" role="form">
         <div class="form-group">
@@ -42,6 +42,19 @@
           </div>
           <div class="num-friends">
             Friends: 1,367
+          </div>
+        </li>
+        <li class='friend' ng-repeat="friend in friends">
+          <img class='profile-pic' ng-src='{{friend.pic_square}}' />
+          <h3>{{ friend.name }}</h3>
+          <div class="loaction">
+            Location: {{ friend.location.city }}, {{ friend.location.state }}, {{ friend.location.country }}
+          </div>
+          <div class='status'>
+            Status: {{ friend.status }}
+          </div>
+          <div class="num-friends">
+            Friends: {{ friend.friend_count }}
           </div>
         </li>
       </ul>
