--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="friends">
       <form class="form-inline searchForm" role="form">
         <div class="form-group">
-          <input class="form-control" placeholder="Search Anything About Your Friends">
+          <input class="form-control" ng-model="searchTerm" placeholder="Search Anything About Your Friends">
 
           <select class="input-medium">
             <option>Name</option>
@@ -44,7 +44,7 @@
             Friends: 1,367
           </div>
         </li>
-        <li class='friend' ng-repeat="friend in friends">
+        <li class='friend' ng-repeat="friend in friends | filter:searchTerm">
           <img class='profile-pic' ng-src='{{friend.pic_square}}' />
           <h3>{{ friend.name }}</h3>
           <div class="loaction">
