--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     <div class="friends">
       <form class="form-inline searchForm" role="form">
         <div class="form-group">
-          <input class="form-control" ng-model="searchTerm" placeholder="Search Anything About Your Friends">
+          <input class="form-control" placeholder="Search Name" ng-model="filters.name">
+          <input class="form-control" placeholder="Search State" ng-model="filters.state">
 
           <select class="input-medium">
             <option>Name</option>
@@ -44,7 +45,7 @@
             Friends: 1,367
           </div>
         </li>
-        <li class='friend' ng-repeat="friend in friends | filter:searchTerm">
+        <li class='friend' ng-repeat="friend in friends | filter: { name: filters.name, location: { state: filters.state } }">
           <img class='profile-pic' ng-src='{{friend.pic_square}}' />
           <h3>{{ friend.name }}</h3>
           <div class="loaction">
